--- a/techtalentblog/src/main/resources/application.properties
+++ b/techtalentblog/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.h2.console.path=/console
 
 spring.datasource.platform=h2
 
+spring.datasource.url = jdbc:h2:file:~/Desktop/tts/classwork/Oct21-BlogProject/blogs
+
+spring.jpa.hibernate.ddl-auto = update
+
